# riskfolio-graphrag-agent

./: .env.example  .gitignore  LICENSE  README.md  app.py  docker-compose.integration.yml  docker-compose.yml  eval_results.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
artifacts/er/: er_audit.json
artifacts/eval/: eval_trend.json
artifacts/observability/: sli_report.json
artifacts/semantic/: graph_export.ttl  semantic_summary.json  shacl_like_report.json
benchmarks/: retrieval_ablation_results.json  retrieval_ablation_results.md  sparql_examples.rq
docs/: architecture_module_map.md  before_after_metrics.md  capability_matrix.md  demo_script_5_7_min.md  hiring_manager_one_page.md  implementation_changelog.md  quickstart.md
scripts/: _patch_taxonomy.py  _run_full_eval.py  benchmark_retrieval_ablation.py  report_observability.py  run_integration_smoke.sh  run_semantic_checks.py
src/riskfolio_graphrag_agent/: __init__.py  cli.py  runtime_ssl.py
src/riskfolio_graphrag_agent/agent/: __init__.py  workflow.py
src/riskfolio_graphrag_agent/app/: __init__.py  gradio_ui.py  server.py
src/riskfolio_graphrag_agent/config/: settings.py
src/riskfolio_graphrag_agent/er/: __init__.py  pipeline.py
src/riskfolio_graphrag_agent/eval/: __init__.py  evaluator.py  regression_gate.py  samples.py
src/riskfolio_graphrag_agent/graph/: __init__.py  builder.py  nl2cypher_guard.py  semantic_interop.py
src/riskfolio_graphrag_agent/ingestion/: loader.py
src/riskfolio_graphrag_agent/observability/: reporting.py
src/riskfolio_graphrag_agent/retrieval/: embeddings.py  retriever.py  router.py
tests/: conftest.py  test_agent.py  test_app.py  test_cli.py  test_config.py  test_embeddings.py  test_entity_resolution.py  test_eval.py  test_eval_gate.py  test_eval_samples.py  test_gradio_app.py  test_graph.py  test_ingestion.py  test_integration_artifacts.py  test_nl2cypher_guard.py  test_observability.py  test_retrieval.py  test_router.py  test_semantic_interop.py
