[tool.poetry]
name = "riskfolio-graphrag-agent"
version = "0.2.0"
description = "Explainable GraphRAG and agentic AI demo over the Riskfolio-Lib codebase and documentation"
authors = ["Ethan Tenison"]
license = "MIT"
readme = "README.md"
packages = [{ include = "riskfolio_graphrag_agent", from = "src" }]

[tool.poetry.dependencies]
python = "3.13.12"
typer = { version = "^0.15", extras = ["all"] }
pydantic-settings = "^2.7"
python-dotenv = "^1.0"
neo4j = "^5.26"
rich = "^13.9"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
chromadb = "^1.0.20"
langgraph = "^0.6.7"
gradio = "5.23.1"
certifi = "^2026.2.25"
truststore = "^0.10.4"
opentelemetry-api = "^1.24.0"
opentelemetry-sdk = "^1.24.0"
opentelemetry-instrumentation = "^0.46b0"
langsmith = "^0.3.45"
pre-commit = "4.5.1"
rdflib = "^7.1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
ruff = "^0.9"
httpx = "^0.28.1"

[tool.poetry.scripts]
riskfolio-agent = "riskfolio_graphrag_agent.cli:app"

[tool.ruff]
line-length = 130
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
extend-select = ["A", "E501", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = [
  "ignore:'asyncio\\.iscoroutinefunction' is deprecated and slated for removal in Python 3\\.16; use inspect\\.iscoroutinefunction\\(\\) instead:DeprecationWarning:neo4j\\..*",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
